# gis-operator

./: .gitignore  README.md  VulkanMap.sln
VulkanMap/: .ignore  CMakeLists.txt  VulkanMap.vcxproj  VulkanMap.vcxproj.filters  appConfigConstants.h  helloTriangleApplication.cpp  helloTriangleApplication.h  main.cpp  queueFamilyIndices.h  swapChainSupportDetails.h
VulkanMap/x64/Debug/: VulkanMap.exe.recipe  vc143.idb
VulkanMap/x64/Debug/VulkanMap.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanMap.lastbuildstate
